<resources>
        <string name="app_name">Red Bowl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="featured_products">Featured Products</string>
    <string name="view_all">View All</string>
    <string name="add_to_basket">Add Basket</string>
    <string name="save_for_later">Save For Later</string>
    <string name="categories">Categories</string>
    <string name="shop_by_categories">Shop By Categories</string>
    <string name="menu_home">Home</string>
    <string name="menu_shop">Shop</string>
    <string name="more_combo">more combo</string>
    <string name="standard_delivery">Standard Delivery : </string>
    <string name="about_product">About Product</string>
    <string name="pack_size">Pack Size</string>
    <string name="Address">Address</string>
    <string name="Confirmation">Confirmation</string>
    <string name="Payment">Payment</string>
    <string name="Cancel">Cancel</string>
    <string name="search_notSet">Not Set</string>
    <string name="image_default_image">Default Image</string>
    <string-array name="filter_brand">
        <item>Nike</item>
    </string-array>
    <string-array name="filter_price">
        <item>Less Then Rs 20</item>
        <item>Rs 21 to Rs 50</item>
        <item>Rs 51 to Rs 100</item>
        <item>Rs 101 to Rs 200</item>
        <item>Rs 201 to Rs 500</item>
        <item>More Then Rs 500</item>
    </string-array>
    <string-array name="filter_discount">
        <item>Less Then 10 %</item>
        <item>11 % to 20 %</item>
        <item>21 % to 30 %</item>
        <item>31 % to 40 %</item>
        <item>41 % to 50 %</item>
        <item>More Then 50%</item>
    </string-array>
    <string-array name="filter_pack_size">
        <item>Less Then 50 ml</item>
        <item>100 ml to 150 ml</item>
        <item>151 ml to 200 ml</item>
        <item>200 g to 300 g</item>
        <item>301 g to 400 g</item>
        <item>401 g to 1 kg</item>
        <item>More Then 1 kg</item>
    </string-array>
    <string-array name="filter_food_preference">
        <item>Vegetarian</item>
    </string-array>
    <string-array name="filter">
        <item>Brand</item>
        <item>Price</item>
        <item>Discount</item>
        <item>Pack Size</item>
        <item>Food Preference</item>
    </string-array>
    <string name="facebook_app_id" translatable="false">0000000000000000</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb0000000000000000</string>
    <string name="stripe_publish_key" translatable="false">pk_0000_000000000000000000000000</string>
    <string name="admob_banner_ads_key" translatable="false">ca-app-pub-0000000000000000/0000000000</string>
    <string name="adview_publisher_key" translatable="false">pub-0000000000000000</string>
    <string name="terms_and_conditions__title">Terms And Conditions</string>
    <string name="refund_policy__title">Refund Policy</string>
    <string name="history__title">History</string>
    <string name="title__activity_user_history_list">UserHistoryListActivity</string>
    <string name="favourite__title">Favourites</string>
    <string name="fb_register__welcome">Welcome from %1$s </string>
    <string name="fb_register__desc">Please login to use all features of application.</string>
    <string name="gallery__title">Gallery</string>
    <string name="gallery_image__gallery">Image Gallery</string>
    <string name="gallery_img__desc">Image Description</string>
    <string name="image_default__image">Default Image</string>
    <string name="app__app_name">Your Grocery Shop</string>
    <string name="app__ok">OK</string>
    <string name="app__cancel">Cancel</string>
    <string name="app__drawer_open">Drawer Open</string>
    <string name="app__drawer_close">Drawer Close</string>
    <string name="menu__fb_login">Facebook Login</string>
    <string name="menu__comment_list">Comment List</string>
    <string name="menu__notification_list">Notification List</string>
    <string name="register__user_name">User Name</string>
    <string name="register__email">Email</string>
    <string name="register__password">Password</string>
    <string name="register__back_to_login">Login</string>
    <string name="register__register">Register</string>
    <string name="register__new_account">Register New User Account</string>
    <string name="register__check_option">Are you agreement this privacy and policy?</string>
    <string name="forgot_password__title">Forgot Password</string>
    <string name="forgot_password__email">Email</string>
    <string name="forgot_password__back_to_login">Already member ? Login</string>
    <string name="forgot_password__password_recovery">Password Recovery</string>
    <string name="forgot_password__save">Save</string>
    <string name="forgot_password__send">Send</string>
    <string name="password_change__password">Password</string>
    <string name="password_change__save">Save</string>
    <string name="password_change__confirm_password">Confirm Password</string>
    <string name="password_change__password_change">Password Change</string>
    <string name="login__email">Email</string>
    <string name="login__password">Password</string>
    <string name="login__not_a_member_join_now">Sign Up</string>
    <string name="login__forgot_your_password">Forgot password ?</string>
    <string name="login__login">SignIn</string>
    <string name="login__welcome_title">Welcome To Shiva Grocery Shop</string>
    <string name="login__choice_text">OR</string>
    <string name="contact_us__name">Contact Name</string>
    <string name="contact_us__email">Contact Email</string>
    <string name="contact_us__message">Contact Message</string>
    <string name="contact_us__phone">Contact Phone</string>
    <string name="contact_us__submit">Submit</string>
    <string name="notification_setting__on_off">Notification Setting ( On/Off )</string>
    <string name="notification_setting__latest_message_from_system">Latest Message From System</string>
    <string name="notification__notification">Notification!</string>
    <string name="notification__title">Notification</string>
    <string name="notification_setting__title">Notification Setting</string>
    <string name="notification_detail__title">Notification Detail</string>
    <string name="notification__alert">Alert</string>
    <string name="language__english">English</string>
    <string name="language__arabic">Arabic</string>
    <string name="language__spanish">Spanish</string>
    <string name="language__language_change">Are you sure you want to change the language?</string>
    <string name="language__title">Language</string>
    <string name="comment__replies">-- %1$s replies</string>
    <string name="comment__dates">-- %1$s </string>
    <string name="comment__title">Comment List</string>
    <string name="comment__detail_title">Comment Replies</string>
    <string name="comment__empty_comment">Comment is Empty.</string>
    <string name="comment__comment">Comment</string>
    <string name="basket__list">Basket List</string>
    <string name="basket__no_item_title">Cart is Empty</string>
    <string name="basket__total">Total</string>
    <string name="basket__items">Items</string>
    <string name="basket__checkout">Checkout</string>
    <string name="basket__no_item_desc">Look like you have no items in your shopping cart. Please continue shopping.</string>
    <string name="basket__attributes">Attributes</string>
    <string name="rating__list">Rating List</string>
    <string name="rating__write_review">Write Review</string>
    <string name="rating__total_count">%1$s Customer Reviews</string>
    <string name="rating__total_value">%1$s out of 5 stars</string>
    <string name="rating__total_count_n_value">%1$s out of 5 stars (%2$s Reviews)</string>
    <string name="rating__count">%1$s star</string>
    <string name="rating__percent">%1$s %%</string>
    <string name="rating__in_stock">In Stock</string>
    <string name="rating__title">Title</string>
    <string name="rating__message">Message</string>
    <string name="rating__user_rating">User Rating Entry !</string>
    <string name="rating__your_rating">Your Rating</string>
    <string name="rating__five_star">5 star</string>
    <string name="rating__four_star">4 star</string>
    <string name="rating__three_star">3 star</string>
    <string name="rating__two_star">2 star</string>
    <string name="rating__one_star">1 star</string>
    <string name="rating__rating_range">Rating Range</string>
    <string name="rating__one">1 and higher</string>
    <string name="rating__two">2 and higher</string>
    <string name="rating__three">3 and higher</string>
    <string name="rating__four">4 and higher</string>
    <string name="rating__five">5 \n</string>
    <string name="rating__comar">","</string>
    <string name="basket_card_view__price">Price</string>
    <string name="basket_card_view__sub_total">Sub Total</string>
    <string name="basket_card_view__default_count">0</string>
    <string name="dialog__title_m_mun">Sorting</string>
    <string name="popular__m_mun">Popular</string>
    <string name="recent__m_mun">Latest</string>
    <string name="low_price__m_mun">Lowest Price</string>
    <string name="high_price__m_mun">Highest Price</string>
    <string name="checkout__payment_method">Payment method</string>
    <string name="checkout__cash_on_delivery">Cash On Delivery</string>
    <string name="checkout__bank">Paypal</string>
    <string name="checkout__other">Stripe</string>
    <string name="checkout__memo">Memo</string>
    <string name="checkout__information__COD">You just need to do cash payment when a purchase or shipment is delivered.</string>
    <string name="checkout__information__PAYPAL" />
    <string name="checkout__information__STRIPE" />
    <string name="checkout__no_payment_method">No Payment Method Available</string>
    <string name="checkout__choose_a_method">You need to choose a payment method</string>
    <string name="checkout__stripe">Pay with Stripe</string>
    <string name="checkout__bank_transfer">Bank</string>
    <string name="checkout__order_registered">Order Successfully Done</string>
    <string name="checkout__shipping_to">Shipping Address </string>
    <string name="checkout__view_detail">View Detail</string>
    <string name="checkout__placed">Your order has been placed.</string>
    <string name="checkout__address_name">Address :</string>
    <string name="checkout__phone_name">Phone :</string>
    <string name="checkout__email_name">Email :</string>
    <string name="checkout__dash">-</string>
    <string name="checkout__claim">Claim</string>
    <string name="my_cart">My Cart (%s)</string>
    <string name="transaction__customer_name_with_order">%s\'s order</string>
    <string name="edit_profile__password">Password</string>
    <string name="menu__me">Me</string>
    <string name="menu__basket">Basket</string>
    <string name="menu__search">Search</string>
    <string name="verify_phone__information">You\'ve just received an sms containing verification code on</string>
    <string name="verify_email__enter_code">Enter verification code</string>
    <string name="verify_email__change_phone">Change Phone Number</string>
    <string name="verify_email__resent_code">Resent Code</string>
    <string name="verify_email__submit">Submit</string>
    <string name="verify_email">Verify Email</string>
    <string name="auth_sign_in">Sign In</string>
    <string name="auth_sign_up">Sign Up</string>
    <string name="already_member">Already member ?</string>
</resources>