<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_category"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"
        />
    <item
        android:id="@+id/nav_shop"
        android:enabled="true"
        android:icon="@drawable/ic_store"
        android:title="@string/menu_shop"
        />
    <item
        android:id="@+id/nav_me"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/menu__me"
        />
    <item
        android:id="@+id/nav_basket"
        android:enabled="true"
        android:icon="@drawable/ic_shop"
        android:title="@string/menu__basket"
        />
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/menu__search"
        />
</menu>