<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.dvishapps.yourshop.ui.viewModel.UserViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ms_white">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarAlwaysDrawHorizontalTrack="false"
                android:scrollbarAlwaysDrawVerticalTrack="false">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView32"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_marginStart="@dimen/space_8"
                    android:layout_marginTop="@dimen/space_52"
                    android:layout_marginEnd="@dimen/space_8"
                    android:contentDescription="@string/image_default__image"
                    android:src="@drawable/avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/app_name_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:paddingBottom="@dimen/space_4"
                    android:text="@string/app__app_name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_h5_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView32" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_16"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="@dimen/space_16"
                    android:background="@drawable/radius"
                    android:backgroundTint="@color/ms_white"
                    android:paddingLeft="@dimen/space_8"
                    android:paddingRight="@dimen/space_8"
                    android:paddingBottom="@dimen/space_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_name_text">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/forgotPwd_"

                        style="@style/md_input"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_56"
                        android:hint="@string/login__email"
                        app:boxStrokeWidth="0dp"
                        app:errorEnabled="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconDrawable="@drawable/baseline_mail">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/forgotPwd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:text="@={viewModel.forgot_email}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/send_mail"
                    style="@style/md_input"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_16"
                    android:layout_marginEnd="@dimen/space_16"
                    android:onClick="@{()->viewModel.forgotPassword()}"
                    android:text="@string/forgot_password__send"
                    android:textColor="@color/button__primary_text"
                    app:elevation="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

                <LinearLayout
                    android:id="@+id/lnr_log_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_16"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/send_mail">

                    <TextView
                        android:id="@+id/txt_new_here"
                        style="@style/txt_input_outline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_member"
                        android:textAllCaps="false"
                        android:textColor="@color/ms_black_87_opacity"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/login_back"
                        style="@style/txt_input_outline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/space_8"
                        android:text="@string/register__back_to_login"
                        android:textColor="@color/orangeBackground" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>